fixed values algorithm. investigating screen top issue on ios devices

--- a/src/styles/sass/header2.scss
+++ b/src/styles/sass/header2.scss
@@ -17,7 +17,7 @@
         width:$width-mobile;
         margin: 0 auto; 
         position:relative;
-        top:11px;
+        // top:11px;
 
         #logo2{
           width:37.49px;
